# Research_Agent

./: .gitignore  ARCHITECTURE_ANALYSIS.md  BUGFIX_执行失败.md  CODE_REVIEW.md  CONVERSATION_HISTORY_FIX.md  CONVERSATION_HISTORY_FIX_V2.md  CURRENT_VERSION_AND_TEST.md  DEBUG_STEPS.md  DEVELOPMENT_PLAN.md  EVALUATION.md  FINAL_EVALUATION.md  FINAL_OPTIMIZATION_SUMMARY.md  INSTALL_GUIDE.md  MODEL_DECOUPLING_SUMMARY.md  MODEL_PROVIDER_CONFIG.md  MULTI_TOOL_CAPABILITY_ANALYSIS.md  MULTI_TOOL_OPTIMIZATION_PLAN.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SCENARIOS.md  OPTIMIZATION_SUMMARY.md  PROBLEM_HANDLING_ARCHITECTURE.md  PROJECT_PLAN.md  PYTHON_UNIFY_GUIDE.md  PYTHON_VERSION.md  QUICKSTART.md  QUICK_START_DEMO.md  QWEN_API_DIAGNOSIS.md  QWEN_API_STATUS.md  QWEN_API_SUMMARY.md  README.md  README_DEMO.md  RUN_GUIDE.md  Research_Agent项目优化方案报告（适配阿里云天池竞赛）.docx  Research_Agent项目优化方案报告（适配阿里云天池竞赛）.ini  SPECIFICATION.md  STARTUP_TIME.md  SYSTEM_FLOW.md  TECHNICAL_DESIGN.md  TIME_SEMANTIC_FIX.md  TIME_TOOL_FIX.md  (+49 more)
config/: config.local.example.yaml  config.yaml
docs/: COMPETITION_ANALYSIS.md  MULTI_AGENT_ARCHITECTURE.md  OBSERVABILITY_AND_DEBUG.md  PHASES_DETAILED.md  QUESTION_PLANNING_FLOW.md  TECHNICAL_ARCHITECTURE.md  TOOL_STRATEGY_UPGRADE.md  USAGE_EXAMPLES.md  user-question-flow-flowchart.md
scripts/: evaluate.py  functional_test.py  generate_submission.py  python_unify.ps1  run_test_once.py  setup_env.py  skill_mcp_smoke_test.py  smoke_test.py  test_search_fix.py  test_web_search_crawl_tool.py
src/: main.py  main_multi_agent.py  toolhub.py
tests/: test_normalize.py  (+2 more)
(+52 files in other folders)
