[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ailiyun-agent"
version = "1.0.0"
description = "Research Agent for Alibaba Cloud Tianchi competition"
readme = "README.md"
requires-python = "==3.13.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
